--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <?php
+<?php
 $insert=false;
 
 if(isset($_POST['name'])){
@@ -47,7 +47,7 @@ if(isset($_POST['name'])){
     //Closing database connection
     $con->close(); 
 }
-?> -->
+?> 
 
 <!DOCTYPE html>
 <html lang="en">
